Bug 1539306 - Don't transform mask layer invalid regions by the current layer transform, since they are positioned relative to our parent. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D25302

--HG--
extra : moz-landing-system : lando